--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/cayman@v0.2.0
 title: [Hilary Hickingbotham]
-description: [Hilary Hickingbotham's Portfolio]
+description: [Former Engineer Turned Statistician]
